# factorio-utils

./: .gitignore  LICENSE  README.md  dev-requirements.txt  makefile  pyproject.toml
factorio/: __init__.py
factorio/bp/: __init__.py  common.py  constant_combinator.py
factorio/gui/: gui.py
tests/: __init__.py  test_bp.py
tests/bp/: __init__.py  test_common.py  test_constant_combinator.py
tests/data/: __init__.py  blueprints.py  bp.py  entities.py
