[project]
name = "factorio"
description = "Factorio utilities."
license = "MIT"
authors = [{ name = "Ben Hattem", email = "benghattem@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
]

[project.gui-scripts]
factorio-utils = "factorio.gui.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".venv"]

[tool.hatch.build.targets.wheel]
packages = ["factorio"]

[tool.hatch.version]
path = "factorio/__init__.py"

[tool.uv]
link-mode = "copy"

[tool.uv.pip]
annotation-style = "line"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pylint.messages_control]
max-line-length = 120
disable = [
]

[tool.pylint.typecheck]
generated-members = [
]
